Alterando local de imagens

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
 
   <body class="attribution">
     <div class="container grid">
-      <img
-        src="/order-summary-component-main/images/illustration-hero.svg"
-        alt="Menina music"
-      />
+      <img src="images/illustration-hero.svg" alt="Menina music" />
 
       <h1>Order Summary</h1>
 
@@ -43,11 +40,7 @@
       </p>
 
       <div class="plan">
-        <img
-          class="icon"
-          src="/order-summary-component-main/images/icon-music.svg"
-          alt="icon music"
-        />
+        <img class="icon" src="images/icon-music.svg" alt="icon music" />
 
         <p class="price">
           Annual Plan
